Docker/proyectos/web_ukiyo_nuxt/deploy/kubernetes/deploy-webcliente.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-web-cliente
  namespace: web-cliente
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-cliente
  template:
    metadata:
      labels:
        app: web-cliente
    spec:
      containers:
      - name: nuxt-frontend
        image: bmleon/webcliente:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
