Docker/proyectos/web_ukiyo_nuxt/deploy/kubernetes/deploy-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-panel-admin
  namespace: web-cliente # Lo dejamos en el mismo namespace para que compartan entorno
  labels:
    app: panel-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: panel-admin
  template:
    metadata:
      labels:
        app: panel-admin
    spec:
      containers:
      - name: panel-admin
        # Tu imagen de Docker Hub para el admin
        image: bmleon/ukiyo-admin:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 # El puerto en el que corra tu Nuxt Admin
---
apiVersion: v1
kind: Service
metadata:
  name: service-panel-admin
  namespace: web-cliente
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: panel-admin
