Docker/proyectos/web_ukiyo_nuxt/deploy/kubernetes/service-webcliente.yml
apiVersion: v1
kind: Service
metadata:
  name: service-web-cliente
  namespace: web-cliente
spec:
  selector:
    app: web-cliente
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
